# personal-assistant

./: .gitignore  Readme.md  pyproject.toml
assistant/: package-lock.json  tailwind.config.js  weather.txt
assistant/assistant/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
assistant/dailyjournal/: admin.py  apps.py  models.py  views.py
assistant/dailyjournal/migrations/: 0001_initial.py  0002_alter_journal_activity_strength_and_more.py
assistant/dailyjournal/templates/dailyjournal/daily/: daily_listing.html
assistant/static/CACHE/css/: output.0a7c332112ed.css
assistant/static/tailwindcss/: output.css
assistant/users/: admin.py  forms.py  models.py
assistant/users/migrations/: 0001_initial.py  0002_customuser_first_name_customuser_last_name.py
assistant/weather/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py  weather.py
assistant/weather/migrations/: 0001_initial.py  0002_alter_weather_measurement_time.py  0002_weather_data_alter_weather_measurement_time_and_more.py  0003_alter_weather_data_alter_weather_measurement_time_and_more.py  0003_alter_weather_measurement_time_alter_weather_name.py  0004_alter_weather_measurement_time.py  0004_alter_weather_measurement_time_alter_weather_name_and_more.py  0005_alter_weather_measurement_time.py  0005_alter_weather_measurement_time_alter_weather_name.py  0006_alter_weather_measurement_time.py  0007_alter_weather_measurement_time.py
assistant/weather/templates/: _base.html
assistant/weather/templates/weather/: base.html
assistant/weather/templates/weather/post/: index.html  (+2 more)
