[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["TJacek <tjacekpiech@poczta.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
