[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["TJacek <tjacekpiech@poczta.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
ruff = "^0.4.4"
requests = "^2.31.0"
include = "^0.2.2"
pre-commit = "^3.7.1"
celery = "^5.4.0"
redis = "^5.0.4"
django-tailwind = "^3.8.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
django-compressor = "^4.5"
poetry-plugin-dotenv = "^2.1.6"
openai = "^1.35.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
